Fixed Nav Bar overflowing issue

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ a.download.locked {
 .nav-wrapper {
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 70px;
     background: #4568DC;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
